# django-example

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  prod_server.yaml  test_server.yml
src/: celery_app.py  manage.py
src/apps/a12n/: apps.py  urls.py
src/apps/a12n/api/v1/: serializers.py  urls.py
src/apps/a12n/services/: base.py  password_reset.py  registration.py
src/apps/a12n/templates/: confirmation.html  password_changed_confirmation.html  password_reset.html  registration.html
src/apps/ai_integration/: update_index.py
src/apps/ai_integration/services/: ai_client.py  formatter.py  searcher.py
src/apps/choices/: apps.py  urls.py
src/apps/choices/api/v1/: urls.py  views.py
src/apps/frames/: apps.py  models.py  tasks.py
src/apps/frames/migrations/: 0001_intial.py  max_migration.txt
src/apps/frames/services/: frames_creator.py
src/apps/playlists/: admin.py  apps.py  models.py  tasks.py  urls.py
src/apps/playlists/migrations/: 0001_initial.py  0002_initial.py  0003_change_category_parent_model.py  0004_remove_playlist_category.py  0005_add_playlist_category_with_uuid.py  0006_path_category_image.py  0007_autofill_categories.py  0008_alter_category_to_nonullable.py  0009_exclude_by_link_playlist_privacy_option.py  0010_change_name_status_to_availability_status.py  0011_add_purpose_choices_playlist.py  0012_change_default_purpose_playlist.py  0013_add_list_ai_suggested_video_pks.py  0014_add_private_links.py  0015_add_commercial_type.py  0016_add_private_links_for_users.py  0017_add_gpt_expenses_report.py  max_migration.txt
src/apps/playlists/services/: expenses_reporter_creator.py  playlist_creator.py  playlist_updater.py  playlist_video_adder.py
src/apps/users/: admin.py  apps.py  models.py  permissions.py  urls.py
src/apps/users/migrations/: 0001_initial.py  0002_add_avatar_field.py  0003_add_status_access_to_cp.py  max_migration.txt
src/apps/videos/: admin.py  apps.py  helpers.py  urls.py
src/apps/videos/migrations/: 0001_initial.py  0002_drop_removed_video_status.py  0003_remove_uploader.py  0004_add_is_unavailavble_field.py  0005_add_quiz_model.py  0006_create_video_file_entity.py  0007_remove_quiz.py  0008_extend_video_file_with_ogg_and_duration_fields.py  0009_some.py  0010_extend_videofile_file_max_length.py  0011_add_source_field_for_transcript.py  0012_add_is_primary_field_for_transcripts.py  0013_add_transcript_history.py  0014_add_user_and_ordering_for_video_file.py  0015_extend_video_and_summarization_models.py  0016_extend_video_and_video_file.py  0017_add_material_status_cook_for_video.py  0018_update_material_statuses.py  0019_update_transcript_timings.py  0020_restore_transcript_timings.py  0021_add_duration_to_video.py  max_migration.txt
src/apps/videos/models/: __init__.py  abstract.py  transcript.py  video.py  video_file.py
src/apps/videos/services/: response_formatter.py  transcript_fetcher.py  vk_transcript.py
src/apps/videos/tasks/: __init__.py  download_file_s3.py  download_frames.py  download_transcript.py  update_index.py
src/core/: .ci.env  base_config.py  files.py  settings.py  urls.py  wsgi.py
src/core/.django-app-template/: apps.py-tpl  models.py-tpl  urls.py-tpl
src/core/admin/: README.md  __init__.py
src/core/api/: filters.py  pagination.py  permissions.py  renderers.py  throttling.py  viewsets.py
src/core/conf/: ai_server.py  api.py  auth.py  boilerplate.py  db.py  dbbackup.py  email.py  environ.py  http.py  installed_apps.py  middleware.py  sentry.py  static.py  storage.py
src/core/conf/summarization/: summarization.py
src/core/exceptions/: __init__.py  main.py  video_download.py
src/core/fixtures/: __init__.py  api.py  datetime.py  factory.py
src/core/management/commands/: makemigrations.py
src/core/models/: __init__.py  abstracts.py  choices.py
src/core/schemas/: base.py
src/core/services/: __init__.py  base.py  html_to_pdf_exporter.py  iam_token.py  private.pem
src/core/testing/: __init__.py  any.py  api.py  factory.py  types.py
tests/apps/: conftest.py
tests/apps/interactions/: conftest.py
tests/apps/interactions/api/: conftest.py  test_create.py  test_delete.py  test_list.py  test_retrieve.py  test_update.py
tests/apps/interactions/services/: test_quiz_deleter.py  test_quiz_validator.py
tests/apps/playlists/: models.py
tests/apps/playlists/api/: conftest.py  test_add_video.py  test_create.py  test_delete.py  test_full_search.py  test_generate_playlist.py  test_list.py  test_my.py  test_private_link.py  test_quizzes.py  test_retrieve.py  test_suggest_video.py  test_units_spent.py  test_update.py
tests/apps/playlists/services/: test_playlist_generator.py  test_video_adder.py
tests/apps/search/: test_requester.py
tests/apps/summarization/: conftest.py  example.py
tests/apps/summarization/api/: conftest.py  test_create.py  test_quizzes.py  test_summary.py
tests/apps/summarization/services/: conftest.py  test_full_summary_creator.py  test_make_combination_prompts.py  test_short_summary_creator.py  test_transcript_creator.py
tests/apps/summarization/tasks/: test_create_quiz_from_timecodes.py
tests/apps/users/models/: test_user.py
tests/apps/videos/api/: conftest.py  test_search.py
tests/apps/videos/models/: test_video_file.py
tests/apps/videos/services/: test_video_creator.py  test_video_deleter.py  test_video_downloader.py  test_video_file_creator.py  test_video_updater.py
tests/core/: tests_doc.py  tests_migrations.py
tests/core/services/: test_iam_token_generator.py
tests/core/testing/factory/: test_factory.py  test_registry.py
tests/factories/: core.py
tests/factories/apps/: playlists.py  users.py  videos.py
tests/fixtures/apps/: playlists.py  users.py  videos.py
tests/fixtures/core/: __init__.py  api.py  factory.py
(+53 files in other folders)
